# diff-motion-api-playground

./: LICENSE  README.md  pyproject.toml
app/: main.py
app/api/: models.py  routes.py
app/config/: system_prompt.md
app/core/: ai_chat.py  diff_motion_api.py
app/static/: index.html  script.js  style.css
misc/: get_presets.py  switch_presets.py
